--- a/config/database.yml
+++ b/config/database.yml
@@ -85,6 +85,6 @@ test:
 #
 production:
   <<: *default
+  url: <%= ENV['DATABASE_URL'] %>
   database: recipe_app_production
   username: postgres
-  password: '0000'
